feat: connect Canim AI with product recommendation context
Add public read-only product context endpoint for AI service, expose active product variants with inventory, image, category and searchable text, update Python backend client to fetch product context from Spring Boot, improve recommendation matching for product and outfit queries, and enhance rule-based NLU keywords for fashion products such as áo thun and giày da.